add function (test)

--- a/plus.html
+++ b/plus.html
@@ -2,9 +2,19 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<script type="text/javascript" src="d3/d3.v3.js"></script>
+	<script>
+		function draw(data){
+			"use strict";
+	
+			
+		}
+	</script>
 	<title>d3</title>
 </head>
 <body>
-	
+	<script>
+	    d3.json("", draw);
+	</script>
 </body>
 </html>
