--- a/plus.html
+++ b/plus.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<title>d3</title>
 	<script type="text/javascript" src="d3/d3.v3.js"></script>
 	<script>
 		function draw(data){
@@ -10,9 +11,65 @@
 			
 		}
 	</script>
-	<title>d3</title>
+	<style>
+		.axis path, line {
+			stroke: black;
+		}
+
+		.line {
+			float: left;
+		}
+
+		.line_container {
+			width: 150px;
+			height: 20px;
+		}
+
+		path {
+			fill: none;
+		}
+
+		.key {
+			float: right;
+		}
+
+		.key_line {
+			font-size: 17px;
+			width: 100%;
+		}
+
+		.key_square {
+			height: 10px;
+			width: 10px;
+			outline: solid 1px black;
+			float: left;
+			margin: 6px 10px 0px 10px;
+		}
+
+		#timeseries {
+			float: left;
+		}
+
+	</style>
 </head>
 <body>
+	<div id="timeseries">
+		<svg>
+			<g id="chart"></g>
+		</svg>
+	</div>
+
+	<div id="key">
+		<div class="key_line">
+			<div class="key_square"></div>
+			<div class="key_label"></div>
+		</div>
+		<div class="key_line">
+			<div class="key_square"></div>
+			<div class="key_label"></div>
+		</div>
+	</div>
+
 	<script>
 	    d3.json("", draw);
 	</script>
